--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
 		<!-- strip-content -->
     	<article class="cb-strip cb-strip-algemene-content">
     		<div class="container">
-    			<h2>Create API</h2>
+    			<h2>Implement CB API</h2>
     			<ul>
-    				<li>Hide strip</li>
-    				<li>Change strip order</li>
+            <li>Show breadcrumb</li>
+    				<li>Hide strip?</li>
+    				<li>Change strip order?</li>
     			</ul>
     		</div>
     	</article>
