--- a/index.html
+++ b/index.html
@@ -64,27 +64,22 @@
     	<!-- /strip-navigatie -->
 
     	<!-- strip-hero-product -->
-		<article class="cb-strip cb-strip-hero-product">
+		<article class="cb-strip cb-strip-hero-product" data-is="cb-strip-hero" background-image="https://cba.imgix.net/verzekeringen/overlijdensrisicoverzekering/PublishingImages/ORV_verzekering.jpg">
 
 		  <div class="hero-banner">
-		  	<div class="banner" style="background-image: url(https://cba.imgix.net/verzekeringen/overlijdensrisicoverzekering/PublishingImages/ORV_verzekering.jpg?);"></div>
+		  	<div class="banner" id="banner"></div>
 		  </div>
+
 		  <div class="page container">
 
-		    <div class="container-breadcrumb">
-		      <div class="gradient"></div>
-		      <ol class="breadcrumb">
-		      	<li><a href="">Dynamic</a></li>
-		      	<li><a href="">Load</a></li>
-		      	<li><span>Breadcrumb</span></li>
-		      </ol>
-		    </div>
+        <cb-breadcrumb></cb-breadcrumb>
 
 		    <section class="content">
 		      <h1>Product titel</h1>
 		      <h2 class="highlight margin-bottom-lg">Tagline tekst</h2>
 
-		      <p><a href="" class="btn btn-orange">Change header image</a></p>
+		      <p><a href="" class="btn btn-orange" id="buttonUpdateBanner">Change header image</a></p>
+
 		     </section>
 		  </div>
 		</article>
@@ -144,15 +139,22 @@
     	<!-- /strip-content -->
     </main>
 
-	<footer class="footer-main noindex">
-	   	<div class="footer-navigation">
-	   		<div class="container">
-	   			[ footer stuff ]
-	   		</div>
-	    </div>
-	    <div class="footer-extra">
-	    	[ extra footer stuff ]
-	    </div>
-	</footer>
+    <footer class="footer-main noindex">
+       	<div class="footer-navigation">
+       		<div class="container">
+       			[ footer stuff ]
+       		</div>
+        </div>
+        <div class="footer-extra">
+        	[ extra footer stuff ]
+        </div>
+    </footer>
+
+    <script src="./tags/cb-strip-hero.tag" type="riot/tag"></script>
+    <script src="./tags/cb-breadcrumb.tag" type="riot/tag"></script>
+
+    <!-- include riot.js and the compiler -->
+    <script src="./node_modules/riot/riot+compiler.min.js"></script>
+    <script> riot.mount('*') </script> 
   </body>
 </html> 
