feat(kenteken): add styleUrl and css file

--- a/angular-2/index.html
+++ b/angular-2/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>My first Kenteken App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -19,6 +19,6 @@
   </head>
 
   <body>
-    <cb-kenteken>Loading...</cb-kenteken>
+    <cb-kenteken>Kenteken app laden...</cb-kenteken>
   </body>
 </html>
